--- a/scripts/gui/README.org
+++ b/scripts/gui/README.org
@@ -1,3 +1,3 @@
-* ndots: gui
+* nd: gui
   The building blocks used in the desktop graphical ui.
   TODO: group gui stuff and cleanup to build a little de-like shell
