--- a/packages/additions.org
+++ b/packages/additions.org
@@ -64,3 +64,4 @@
 | pacman | qt5ct                          | N.A.                                       | QT5 configurations                                                                             |
 | pacman | geoip                          | N.A.                                       | geographical IP database                                                                       |
 | git    | msoffice                       | https://github.com/Naheel-Azawy/officejail | ms office wrapper                                                                              |
+| git    | gtk-print                      | https://github.com/nbfalcon/gtk-print      | gtk printer dialog                                                                             |
