--- a/packages/base-gui.org
+++ b/packages/base-gui.org
@@ -22,7 +22,7 @@
 | pacman   | dunst                  | N.A.                                    | suckless notification system                                     |
 | pacman   | feh                    | N.A.                                    | a minimal image viewer (used to set wallpaper)                   |
 | pacman   | imlib2                 | N.A.                                    | images library. Needed for sxiv                                  |
-| pacman   | chromium               | N.A.                                    | well, in most cases it is faster than firefox...                 |
+| aur      | brave-bin              | N.A.                                    | default browser                                                  |
 | pacman   | gnome-keyring          | N.A.                                    | serves as the system keyring                                     |
 | pacman   | gnome-themes-extra     | N.A.                                    | gives the dark GTK theme                                         |
 | aur      | lemonbar-xft-git       | N.A.                                    | status bar                                                       |
