--- a/packages/base.org
+++ b/packages/base.org
@@ -57,3 +57,4 @@
 | aur        | archivemount        | N.A.                                         | mount archives using fuse                                    |
 | git        | latexwrapper        | https://github.com/Naheel-Azawy/latexwrapper | LaTeX wrapper                                                |
 | git        | calc                | https://github.com/Naheel-Azawy/shell-calc   | mini shell math tools                                        |
+| pacman     | htop                | N.A.                                         | a friendly top                                               |
