--- a/packages/base-gui.org
+++ b/packages/base-gui.org
@@ -22,6 +22,7 @@
 | pacman   | dunst                  | N.A.                                    | suckless notification system                                     |
 | pacman   | feh                    | N.A.                                    | a minimal image viewer (used to set wallpaper)                   |
 | pacman   | imlib2                 | N.A.                                    | images library. Needed for sxiv                                  |
+| git      | sxiv                   | https://github.com/Naheel-Azawy/sxiv    | the image viewer                                                 |
 | aur      | brave-bin              | N.A.                                    | default browser                                                  |
 | pacman   | gnome-keyring          | N.A.                                    | serves as the system keyring                                     |
 | pacman   | gnome-themes-extra     | N.A.                                    | gives the dark GTK theme                                         |
@@ -39,7 +40,7 @@
 | pacman   | cups                   | N.A.                                    | in case you need to use a printer                                |
 | pacman   | cups-pdf               | N.A.                                    | pdf for cups                                                     |
 | pacman   | system-config-printer  | N.A.                                    | a little GUI to control your printers                            |
-| aur      | xbanish                | N.A.                                    | hide the mouse cursor while typing                               |
+| git      | xbanish                | https://github.com/AtomToast/xbanish    | hide the mouse cursor while typing                               |
 | pacman   | pulseaudio             | N.A.                                    | the audio system (>inb4 bloat)                                   |
 | pacman   | pamixer                | N.A.                                    | terminal audio control interface                                 |
 | pacman   | pulsemixer             | N.A.                                    | an intuitive ncurses audio controller                            |
@@ -62,7 +63,7 @@
 | pacman   | onboard                | N.A.                                    | on-screen keyboard                                               |
 | git      | prayer                 | https://github.com/Naheel-Azawy/prayer  | CLI prayer time                                                  |
 | aur      | btop-git               | N.A.                                    | a nice system monitor                                            |
-| git      | dragon                 | https://github.com/mwh/dragon           | drag and drop                                                    |
+| aur      | dragon-drop            |                                         | drag and drop                                                    |
 | pacman   | acpilight              | N.A.                                    | brightness control                                               |
 | pacman   | udisks2                | N.A.                                    | nice disks management                                            |
 | pacman   | ueberzug               | N.A.                                    | image previews in the terminal                                   |
@@ -80,3 +81,7 @@
 | aur      | networkmanager-dmenu   | N.A.                                    | manage nm from dmenu                                             |
 | pacman   | gsimplecal             | N.A.                                    | simple calender                                                  |
 | git      | bspdd                  | https://github.com/Naheel-Azawy/bspdd   | bspwm dynamic desktops                                           |
+| pacman   | fprintd                | N.A.                                    | fingerprint reader                                               |
+| pacman   | bluez                  | N.A.                                    | bluetooth service                                                |
+| pacman   | blueman                | N.A.                                    | bluetooth gui frontend                                           |
+| aur      | highlight-pointer      | N.A.                                    | red pointer for presentations                                    |
