--- a/packages/base.org
+++ b/packages/base.org
@@ -58,3 +58,4 @@
 | git        | latexwrapper        | https://github.com/Naheel-Azawy/latexwrapper | LaTeX wrapper                                                |
 | git        | calc                | https://github.com/Naheel-Azawy/shell-calc   | mini shell math tools                                        |
 | pacman     | htop                | N.A.                                         | a friendly top                                               |
+| pacman     | ufw                 | N.A.                                         | firewall                                                     |
