--- a/packages/additions.org
+++ b/packages/additions.org
@@ -4,18 +4,15 @@
 | pacman | nodejs                         | N.A.                                       | node.js is needed to run some programs ahead                                                   |
 | pacman | npm                            | N.A.                                       | node.js pacage manager                                                                         |
 | npm    | shelljs                        | N.A.                                       | shell commands on js                                                                           |
-| pip    | youtube-dl                     | N.A.                                       | can download any YouTube video (or playlist or channel) when given the link                    |
-| pacman | youtube-viewer                 | N.A.                                       | is a terminal interface for watching YouTube videos without a browser                          |
+| pacman | yt-dlp                         | N.A.                                       | can download any YouTube video (or playlist or channel) when given the link                    |
 | pacman | libreoffice                    | N.A.                                       | because off course someone will send a file that is not a plain text...                        |
 | pacman | jdk-openjdk                    | N.A.                                       | Java development kit                                                                           |
 | pacman | firejail                       | N.A.                                       | keeps untrusted software in jail                                                               |
 | pacman | arch-install-scripts           | N.A.                                       | contains some helpful scripts to install or maintain arch                                      |
 | pacman | gimp                           | N.A.                                       | the gnu image manipulation program                                                             |
-| aur    | gimp-plugin-resynthesizer      | N.A.                                       | gimp resynthesizer                                                                             |
 | aur    | drawio-desktop-bin             | N.A.                                       | diagram builder                                                                                |
 | pacman | imagemagick                    | N.A.                                       | the magical image editor                                                                       |
 | pacman | virtualbox                     | N.A.                                       | the chosen virtual machine                                                                     |
-| pacman | virtualbox-host-modules-arch   | N.A.                                       | virtual-box kernel modules                                                                     |
 | pacman | nautilus                       | N.A.                                       | GNOME's file manager                                                                           |
 | pacman | wine                           | N.A.                                       | runs Windows programs. Always be careful while using non free software. Best fit with firejail |
 | pacman | wine-mono                      | N.A.                                       | needed by wine                                                                                 |
@@ -41,7 +38,6 @@
 | pacman | gnuplot                        | N.A.                                       | Gnu plotting program                                                                           |
 | pacman | iotop                          | N.A.                                       | top for disk io                                                                                |
 | pacman | sysstat                        | N.A.                                       | a collection of performance monitoring tools (iostat,isag,mpstat,pidstat,sadf,sar)             |
-| npm    | cloudconvert                   | N.A.                                       | usefull to convert ugly documents written in non-free softwares                                |
 | pacman | perl-file-mimeinfo             | N.A.                                       | file opener with mime type                                                                     |
 | git    | colorpicker                    | https://github.com/ym1234/colorpicker      | a simple color picker                                                                          |
 | pacman | lshw                           | N.A.                                       | list hardware devices                                                                          |
@@ -56,11 +52,9 @@
 | pacman | foliate                        | N.A.                                       | ebook reader                                                                                   |
 | pacman | arch-audit                     | N.A.                                       | audit your system                                                                              |
 | git    | rn                             | https://github.com/Naheel-Azawy/runner     | executes everything                                                                            |
-| pacman | w3m                            | N.A.                                       | terminal browser which can also view images                                                    |
 | pacman | lynx                           | N.A.                                       | a terminal web browser                                                                         |
 | pacman | units                          | N.A.                                       | units converter                                                                                |
 | pacman | octave                         | N.A.                                       | matlab alternative                                                                             |
-| aur    | adwaita-qt                     | N.A.                                       | Adwaita GNOME theme for Qt5                                                                    |
 | pacman | qt5ct                          | N.A.                                       | QT5 configurations                                                                             |
 | pacman | geoip                          | N.A.                                       | geographical IP database                                                                       |
 | git    | msoffice                       | https://github.com/Naheel-Azawy/officejail | ms office wrapper                                                                              |
